@@ -224,11 +224,21 @@ each line of input. A data line is output if any of the patterns match it. The
 filename can be given as "-" to refer to the standard input. When \fB-f\fP is
 used, patterns specified on the command line using \fB-e\fP may also be
 present; they are tested before the file's patterns. However, no other pattern
-is taken from the command line; all arguments are treated as file names. There
-is an overall maximum of 100 patterns. Trailing white space is removed from
-each line, and blank lines are ignored. An empty file contains no patterns and
-therefore matches nothing. See also the comments about multiple patterns versus
-a single pattern with alternatives in the description of \fB-e\fP above.
+is taken from the command line; all arguments are treated as the names of paths
+to be searched. There is an overall maximum of 100 patterns. Trailing white
+space is removed from each line, and blank lines are ignored. An empty file
+contains no patterns and therefore matches nothing. See also the comments about
+multiple patterns versus a single pattern with alternatives in the description
+of \fB-e\fP above.
+.TP
+\fB--file-list\fP=\fIfilename\fP
+Read a list of files to be searched from the given file, one per line. Trailing
+white space is removed from each line, and blank lines are ignored. These files
+are searched before any others that may be listed on the command line. The
+filename can be given as "-" to refer to the standard input. If \fB--file\fP
+and \fB--file-list\fP are both specified as "-", patterns are read first. This
+is useful only when the standard input is a terminal, from which further lines
+(the list of files) can be read after an end-of-file indication.
 .TP
 \fB--file-offsets\fP
 Instead of showing lines or parts of lines that match, show each match as an
@@ -485,11 +495,12 @@ convert this to an appropriate sequence if the output is sent to a file.
 Many of the short and long forms of \fBpcregrep\fP's options are the same
 as in the GNU \fBgrep\fP program (version 2.5.4). Any long option of the form
 \fB--xxx-regexp\fP (GNU terminology) is also available as \fB--xxx-regex\fP
-(PCRE terminology). However, the \fB--file-offsets\fP, \fB--include-dir\fP,
-\fB--line-offsets\fP, \fB--locale\fP, \fB--match-limit\fP, \fB-M\fP,
-\fB--multiline\fP, \fB-N\fP, \fB--newline\fP, \fB--recursion-limit\fP,
-\fB-u\fP, and \fB--utf-8\fP options are specific to \fBpcregrep\fP, as is the
-use of the \fB--only-matching\fP option with a capturing parentheses number.
+(PCRE terminology). However, the \fB--file-list\fP, \fB--file-offsets\fP,
+\fB--include-dir\fP, \fB--line-offsets\fP, \fB--locale\fP, \fB--match-limit\fP,
+\fB-M\fP, \fB--multiline\fP, \fB-N\fP, \fB--newline\fP,
+\fB--recursion-limit\fP, \fB-u\fP, and \fB--utf-8\fP options are specific to
+\fBpcregrep\fP, as is the use of the \fB--only-matching\fP option with a
+capturing parentheses number.
 .P
 Although most of the common options work the same way, a few are different in
 \fBpcregrep\fP. For example, the \fB--include\fP option's argument is a glob
@@ -577,6 +588,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 06 September 2011
-Copyright (c) 1997-2011 University of Cambridge.
+Last updated: 28 February 2012
+Copyright (c) 1997-2012 University of Cambridge.
 .fi
